@@ -8,7 +8,7 @@ public class TaskManager {
         private int nextId = 1;
         //追加
         public Task add(String title) {
-            if (title == null || title.trim().isEmpty()) {
+            if (title == null || title.isBlank()) {
                 System.out.println("タイトルは必須です");
             }
             Task task = new Task(nextId, title);
@@ -36,12 +36,22 @@ public class TaskManager {
         }
 
         //タイトル変更
-        public boolean updatedTitle(int id, String newTitle){
-            for (Task t: tasks) {
-                if (t.getId() == id){
-                    t.setTitle(newTitle);
-                }
+        public boolean updateTitle(int id, String newTitle){
+            if (newTitle == null || newTitle.isBlank()) {
+                System.out.println("タイトルは必須です");
+                return false;
             }
+            for (Task t : tasks) {
+                if (t.getId() == id ){
+                    t.setTitle(newTitle.trim());
+                    return true;
+                }
+                }
+            System.out.println("IDが見つかりません");
+            return false;
+            }
+
+
         }
-}
+
 
